syntax = "proto3";

option go_package = ".;pb";

import "google/protobuf/empty.proto";

package news_service;

service NewsService {
  rpc GetNews(google.protobuf.Empty) returns (NewsListResponse) {}
}

message News {
  uint32 id = 1;
  string title = 2;
  string body = 3;
  uint32 user_id = 4;
}

message NewsListResponse {
  repeated News news = 1;
}
